test/soya/error/type/not_class.soy
function void main() {
  int c = 0;
  putchar(c.x);
}

